apps/macterm/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: macterm-website
spec:
  selector:
    app: macterm-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
